ajouts crom equipe soutiens

--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -99,10 +99,7 @@
                                 <p>invité.e.s par Alice Tabart à venir monter chacun.e un acte de ce monstre dont elle assure la coordination et la dramaturgie générale.</p>
                                 <p class="text-end"><i><b>Durée 6h</b><br>
                                         (entractes et repas inclus)</i></p>
-
-                                        <p><i class="fa-solid fa-circle-info fa-lg" style="color: #fff;"></i> <a class="action-link" href="https://www.severacdaveyron.fr/premiere-mondiale-au-chateau-de-severac-cromwell-de-victor-hugo/">Infos et réservations</a> <i class="fa-solid fa-ticket fa-rotate-by fa-lg" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i></p>
-                                
-                              
+                                <p><i class="fa-solid fa-circle-info fa-lg" style="color: #fff;"></i> <a class="action-link" href="https://www.severacdaveyron.fr/premiere-mondiale-au-chateau-de-severac-cromwell-de-victor-hugo/">Infos et réservations</a> <i class="fa-solid fa-ticket fa-rotate-by fa-lg" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i></p>
                             </div>
                         </div>
                     </div>
@@ -147,11 +144,19 @@
                                 <br>
                                 <span class="label-equipe-crea">Son et création musicale /</span> François Rivère
                                 <br>
-                                <span class="label-equipe-crea">Musicien /</span> Raphaël Jamin
+                                <span class="label-equipe-crea">Musicien⸱ne et création musicale /</span> Clarice Boyriven, Eliot Saour, Raphaël Jamin
                                 <br>
                                 <span class="label-equipe-crea">Rigger /</span> Arnaud Delheure
                                 <br>
                                 <span class="label-equipe-crea">Électricien /</span> Artur Canillas
+                                <br>
+                                <span class="label-equipe-crea">Technicienne lumière /</span> Héloïse Vandermacq
+                                <br>
+                                <span class="label-equipe-crea">Regard costumes /</span> Elsa Séguier-Faucher
+                                <br>
+                                <span class="label-equipe-crea">Costumes /</span> Adrien Galaup
+                                <br>
+                                <span class="label-equipe-crea">Chargée de production /</span> Marion Hodel
                                 <br>
                                 <span class="label-equipe-crea">Stagiaire /</span> Clément Cadinot
                                 <br>
@@ -184,11 +189,14 @@
                         <div class="col-xxl-6">
                             <h2>Production</h2>
                             <div class="production">
-                                <p>Une production de la <a href="https://mesdames-a.fr">compagnie Mesdames A</a>, en partenariat avec le club dramatique, le Théâtre du Rocher et MégaSuperThéâtre.<br>
-                                    Avec le soutien de La Mairie de Toulouse.<br>
-                                    Co-producteurs : Commune de Sévérac d'Aveyron, Théâtre Jules Julien, Théâtre du Grand Rond.</p>
-                                <p>En partenariat avec le CC Bonnefoy et Théâtre des Mazades.<br>
-                                    Avec le soutien matériel du Théâtre de la Cité - CDN de Toulouse, Cave Poésie, RAVIV-Réseau des Arts vivants, CC de la Brique Rouge et de la compagnie le Phün.</p>
+                                <p><span class="label-equipe-crea">Production : </span><a href="https://mesdames-a.fr">Compagnie Mesdames A</a>.</p>
+                                <p>
+                                    <span class="label-equipe-crea">Co-producteurs :</span> Commune de Sévérac d'Aveyron, Théâtre Jules Julien, Théâtre du Grand Rond.<br>
+                                    <span class="label-equipe-crea">Avec le soutien de :</span> Mairie de Toulouse, Communauté de communes des Causses à l'Aubrac, Département d'Aveyron, Région Occitanie, l'Union Européenne (Fond Leader).<br>
+                                    <span class="label-equipe-crea">En partenariat avec :</span> Centre Culturel Bonnefoy, Théâtre des Mazades.
+                                    <br>
+                                    <span class="label-equipe-crea">Avec le soutien matériel de :</span> Théâtre de la Cité - CDN de Toulouse, RAVIV-Réseau des Arts vivants, MégaSuperThéâtre, leclubdramatique, Avant l'incendie, Le Théâtre du Rocher, Centre Culturel de la Brique Rouge, Théâtre des Mazades, Théâtre Jules Julien, La Grainerie, Théâtre du Pavé, Gafalu, Le Motor, Scène F, Le Phun, Compagnie Le Périscope, Baro d'Evel.
+                                </p>
                                 <!-- <br>
                                 Retrouvez plus de détails&nbsp; dans le <a href="media/PDF/dossier-presse-cromwell.pdf">dossier de communication -->
                             </div>
