video crom + nom regie comme

--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -103,7 +103,11 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <h2>Galerie</h2> -->
+                    <h2>Galerie</h2>
+                    <div class="embed-responsive embed-responsive-16by9">
+                            <iframe 
+                            src="https://www.youtube.com/embed/videoseries?si=B5DYmDpSX2OSR8q_&amp;list=PLu76slpIU-I9vhPup66LPu249BGdCkFHJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
                     <div id="galcromwell" class="hidden mt-4">
                         <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/05-cromwell-xl-coline-slide-dsc-9666.jpg" title="Cromwell - Tyrolienne">
                             <img src="media/images/05-cromwell-sm-coline-slide-dsc-9666.jpg" alt="Cromwell - Tyrolienne" width="24%" class="img-thumbnail">
@@ -192,7 +196,7 @@
                                 <p><span class="label-equipe-crea">Production : </span><a href="https://mesdames-a.fr">Compagnie Mesdames A</a>.</p>
                                 <p>
                                     <span class="label-equipe-crea">Co-producteurs :</span> Commune de Sévérac d'Aveyron, Théâtre Jules Julien, Théâtre du Grand Rond.<br>
-                                    <span class="label-equipe-crea">Avec le soutien de :</span> Mairie de Toulouse, Communauté de communes des Causses à l'Aubrac, Département d'Aveyron, Région Occitanie, l'Union Européenne (Fond Leader).<br>
+                                    <span class="label-equipe-crea">Avec le soutien de : Mairie de Toulouse, Communauté de communes des Causses à l'Aubrac, Département d'Aveyron, Région Occitanie, l'Union Européenne (Fond Leader).<br>
                                     <span class="label-equipe-crea">En partenariat avec :</span> Centre Culturel Bonnefoy, Théâtre des Mazades.
                                     <br>
                                     <span class="label-equipe-crea">Avec le soutien matériel de :</span> Théâtre de la Cité - CDN de Toulouse, RAVIV-Réseau des Arts vivants, MégaSuperThéâtre, leclubdramatique, Avant l'incendie, Le Théâtre du Rocher, Centre Culturel de la Brique Rouge, Théâtre des Mazades, Théâtre Jules Julien, La Grainerie, Théâtre du Pavé, Gafalu, Le Motor, Scène F, Le Phun, Compagnie Le Périscope, Baro d'Evel.
