ajouts cromwell - videos - images

--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -81,10 +81,13 @@
                                 <!-- <p class="text-center"><iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/compagnie-mesdames-a/collectes/cromwell-l-experience-theatrale/widget-vignette" style="width: 300px; height: 441px; border: none;"></iframe></p> -->
                                 <p>Cromwell, pièce-fleuve révolutionnaire de Victor Hugo, c'est 400 pages, 6000 vers, une alternance de scènes intimes, de farce, de cour, de bouffonneries, de chansons, d'intrigues politiques et d'espionnage. Surtout un grand élan théâtral aux 80 personnages qui tissent la trame de ce jeu historique. Réputée immontable, immontée en intégralité depuis son édition en 1827, plus connue pour sa préface que pour son drame, c’est pourtant une magnifique machine à jouer.</p>
                                 <p>
-                                    <div class="mx-auto text-center">
+                                    <video class="w-100" controls autoplay muted preload="metadata">
+                                        <source src="media/videos/teaser-cromwell-mesdames-a-h.265.mp4" type="video/mp4" />
+                                    </video>
+                                    <div class=" hidden mx-auto text-center">
                                         <picture>
-                                            <source src="media/images/cromwell-banniere.webp" type="webp">
-                                            <img src="media/images/cromwell-banniere.jpeg" alt="baniere cromwell" class="img-fluid">
+                                            <source src="media/images/cromwell-banniere-2.png_576.webp" type="webp">
+                                            <img src="media/images/cromwell-banniere-2.png_576.webp" alt="baniere cromwell" class="img-fluid">
                                         </picture>
                                     </div>
                                 </p>
@@ -99,15 +102,16 @@
                                 <p>invité.e.s par Alice Tabart à venir monter chacun.e un acte de ce monstre dont elle assure la coordination et la dramaturgie générale.</p>
                                 <p class="text-end"><i><b>Durée 6h</b><br>
                                         (entractes et repas inclus)</i></p>
-                                <p><i class="fa-solid fa-circle-info fa-lg" style="color: #fff;"></i> <a class="action-link" href="https://www.severacdaveyron.fr/premiere-mondiale-au-chateau-de-severac-cromwell-de-victor-hugo/">Infos et réservations</a> <i class="fa-solid fa-ticket fa-rotate-by fa-lg" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i></p>
+                                <p><i class="fa-solid fa-circle-info fa-lg" style="color: #fff;"></i> <a class="action-link" href="https://www.severacdaveyron.fr/premiere-mondiale-au-chateau-de-severac-cromwell-de-victor-hugo/">Infos et réservations (12, 14, 16 août)</a> <i class="fa-solid fa-ticket fa-rotate-by fa-lg" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i></p>
                             </div>
                         </div>
                     </div>
                     <h2>Galerie</h2>
-                    <div class="embed-responsive embed-responsive-16by9">
-                            <iframe 
-                            src="https://www.youtube.com/embed/videoseries?si=B5DYmDpSX2OSR8q_&amp;list=PLu76slpIU-I9vhPup66LPu249BGdCkFHJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        </div>
+                    <div id="galcrocro" class="mt-4">
+                        <a data-gallery="#blueimp-gallery-galcrocro" data-toggle="lightbox" href="media/images/cromwell-silhouettes-coline-lubin.png_1440.webp" title="Cromwell - Tyrolienne">
+                            <img src="media/images/cromwell-silhouettes-coline-lubin.png_576.webp" alt="Cromwell - coucher soleil - Crédit : Coline Lubin" width="100%" class="img-thumbnail">
+                        </a>
+                    </div>
                     <div id="galcromwell" class="hidden mt-4">
                         <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/05-cromwell-xl-coline-slide-dsc-9666.jpg" title="Cromwell - Tyrolienne">
                             <img src="media/images/05-cromwell-sm-coline-slide-dsc-9666.jpg" alt="Cromwell - Tyrolienne" width="24%" class="img-thumbnail">
@@ -189,17 +193,22 @@
                                 Yoan Charles<br>
                                 Yohann Villepastour<br>
                             </p>
+                            <div class="ratio ratio-16x9">
+                                <iframe src="https://www.youtube.com/embed/videoseries?si=B5DYmDpSX2OSR8q_&amp;list=PLu76slpIU-I9vhPup66LPu249BGdCkFHJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen title="Cromwell"></iframe>
+                            </div>
                         </div>
                         <div class="col-xxl-6">
                             <h2>Production</h2>
                             <div class="production">
                                 <p><span class="label-equipe-crea">Production : </span><a href="https://mesdames-a.fr">Compagnie Mesdames A</a>.</p>
                                 <p>
-                                    <span class="label-equipe-crea">Co-producteurs :</span> Commune de Sévérac d'Aveyron, Théâtre Jules Julien, Théâtre du Grand Rond.<br>
-                                    <span class="label-equipe-crea">Avec le soutien de : Mairie de Toulouse, Communauté de communes des Causses à l'Aubrac, Département d'Aveyron, Région Occitanie, l'Union Européenne (Fond Leader).<br>
+                                    <span class="label-equipe-crea">Co-producteurs :</span> Commune de Sévérac d'Aveyron, Théâtre Jules Julien, Théâtre du Grand Rond.</p>
+                                <p>
+                                    <span class="label-equipe-crea">Avec le soutien de :</span> Mairie de Toulouse, Communauté de communes des Causses à l'Aubrac, Département d'Aveyron, Région Occitanie, l'Union Européenne (Fond Leader).</p>
+                                <p>
                                     <span class="label-equipe-crea">En partenariat avec :</span> Centre Culturel Bonnefoy, Théâtre des Mazades.
-                                    <br>
-                                    <span class="label-equipe-crea">Avec le soutien matériel de :</span> Théâtre de la Cité - CDN de Toulouse, RAVIV-Réseau des Arts vivants, MégaSuperThéâtre, leclubdramatique, Avant l'incendie, Le Théâtre du Rocher, Centre Culturel de la Brique Rouge, Théâtre des Mazades, Théâtre Jules Julien, La Grainerie, Théâtre du Pavé, Gafalu, Le Motor, Scène F, Le Phun, Compagnie Le Périscope, Baro d'Evel.
+                                </p>
+                                <p> <span class="label-equipe-crea">Avec le soutien matériel de :</span> Théâtre de la Cité - CDN de Toulouse, RAVIV-Réseau des Arts vivants, MégaSuperThéâtre, leclubdramatique, Avant l'incendie, Le Théâtre du Rocher, Centre Culturel de la Brique Rouge, Théâtre des Mazades, Théâtre Jules Julien, La Grainerie, Théâtre du Pavé, Gafalu, Le Motor, Scène F, Le Phun, Compagnie Le Périscope, Baro d'Evel.
                                 </p>
                                 <!-- <br>
                                 Retrouvez plus de détails&nbsp; dans le <a href="media/PDF/dossier-presse-cromwell.pdf">dossier de communication -->
@@ -233,11 +242,11 @@
                             </div>
                         </div>
                         <div class="col-auto col-md-4 mx-auto">
-                            <a data-gallery="#blueimp-gallery-Affichecromwell" data-toggle="lightbox" href="media/images/affiche-cromwell.png_960.webp" title="Cromwell - Poursuite" class="text-white">
+                            <a data-gallery="#blueimp-gallery-Affichecromwell" data-toggle="lightbox" href="media/images/photos-origine/affiche-cromwell-jaune_vf.pdf" title="Cromwell - affiche" class="text-white">
                                 <picture>
-                                    <source src="media/images/affiche-cromwell.png_720.webp" type="">
+                                    <source src="media/images/affiche-cromwell-jaune_vf.png_720.webp" type="webp">
                                 </picture>
-                                <img src="media/images/photos-origine/affiche-cromwell.png" alt="Commencement Affiche" class="img-fluid affiche-cromwell">
+                                <img src="media/images/affiche-cromwell-jaune_vf.png_720.webp" alt="Cromwell affiche" class="img-fluid affiche-cromwell">
                             </a>
                         </div>
                     </div>
