--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="/manifest.json">
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- BLUEIMP Gallery-->
     <!-- <link rel="stylesheet" href="css/blueimp-gallery.min.css" /> -->
     <!-- Custom CSS -->
@@ -448,7 +448,7 @@
                             <div class="col">
                                 <!-- cromwell -->
                                 <div class="card h-100 card-cromwell border-secondary bg-transparent text-white mb-3">
-                                    <img class="card-img-top" src="creations/cromwell/media/images/cromwell-banniere-4-3-bg.webp" alt="eclairs-jeu">
+                                    <img class="card-img-top" src="creations/cromwell/media/images/cromwell-banniere-4-3-bg-2.png_576.webp" alt="eclairs-jeu">
                                     <div class="card-img-overlay d-flex flex-column">
                                         <h4 class="card-title titre-creations-cards"><i>Cromwell</i></h4>
                                         <h6 class="card-subtitle mb-2"><small><i>2024/25</i></small></h6>
@@ -1018,7 +1018,7 @@
         </div>
     </footer>
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
     <!--Add to Calendar button (atc) init-->
     <script type="text/javascript">
