--- a/creations/monologue/index 2.html
+++ b/creations/monologue/index 2.html
@@ -14,18 +14,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Le Monologue d'une tueuse - Création la compagnie Mesdames A, compagnie de théâtre contemporain et arts vivants basée à Toulouse. Dirigée par Alice Tabart.">
+    <meta name="description" content="Le Monologue d'une tueuse - Création de la compagnie Mesdames A">
     <meta name="author" content="Alice Tabart, Gilles Tabart">
     <meta name="robots" content="index, follow">
-    <meta name="keywords" content="mesdames a, pièce, théâtre, theatre, contemporain, spectacle, art, Alice Tabart, Tabart, spectacle, chant, danse, compagnie, troupe">
+    <meta name="keywords" content="monologue, tueuse, mesdames a, pièce, théâtre, theatre, contemporain, spectacle, art, Alice Tabart, Tabart, spectacle, chant, danse, compagnie, arts vivants, Toulouse">
     <meta name="theme-color" content="#000000">
-    <title>Le Commencement - Mesdames A</title>
+    <title>Le Monologue d'une Tueuse - Mesdames A</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="/manifest.json">
     <!-- Bootstrap CSS and JS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link href="./../../css/scrolling-nav2.css" rel="stylesheet">
     <!-- Fonts stuff -->
@@ -235,7 +235,7 @@
 </body>
 <!-- ///////////// SCRIPTS ////////////////-->
 <!-- bootstrap 5 -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <!-- bs5-ligthbox-->
 <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
 
