--- a/creations/commencement/index.html
+++ b/creations/commencement/index.html
@@ -148,8 +148,7 @@
                         <div class="col-xxl-6">
                             <h2>Production</h2>
                             <div class="production">
-                                <p>Une production de la <a href="https://mesdames-a.fr">compagnie Mesdames A</a> avec le soutien de la Commune de Sévérac d’Aveyron (résidence de Territoire et diffusion), du Collège Jean D'Alembert (médiation), de l'Espace Archéologique Départemental de Montrozier (résidence et diffusion), du Conseil Départemental de l'Aveyron (subvention dans le cadre du dispositif "Partenariat avec les structures culturelles et les territoires") et de l'Association d'entraide sociale et populaire de Saint Sernin les Mailhoc (accueil en résidence).</p>
-                                <p>La Compagnie a bénéficié du fond de soutien du Département de la Haute-Garonne ainsi que du dispositif de relance OCCAL du Conseil Régional de l’Occitanie.</p>
+                                <p>Une production de la <a href="https://mesdames-a.fr">compagnie Mesdames A</a> avec le soutien de la DRAC (Été Culturel), du Conseil Départemental de l'Aveyron, de la Commune de Sévérac d’Aveyron (résidence de Territoire et diffusion), du Collège Jean D'Alembert (participation de la CHAM au spectacle), de l'Espace Archéologique Départemental de Montrozier (résidence et diffusion), et de l'Association d'entraide sociale et populaire de Saint Sernin les Mailhoc (accueil en résidence). </p>
                                 <!-- <br>
                                 Retrouvez plus de détails&nbsp; dans le <a href="media/PDF/dossier-presse-commencement.pdf">dossier de communication -->
                             </div>
