--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -95,7 +95,7 @@
                                         </picture>
                                     </div>
                                 </p>
-                                <p>Pour monter ce projet nous serons six metteur.e.s en scène</p>
+                                <p>Pour monter ce projet nous sommes six metteur.e.s en scène</p>
                                 <ul class="liste-p">
                                     <li>Mélanie Vayssettes et Simon Le Floc'h - <i>le club dramatique</i>,</li>
                                     <li>Nathan Croquet - <i>Théâtre du Rocher</i>,</li>
@@ -104,9 +104,9 @@
                                     <li>Théodore Oliver - <i>MégaSuperThéâtre</i></li>
                                 </ul>
                                 <p>invité.e.s par Alice Tabart à venir monter chacun.e un acte de ce monstre dont elle assure la coordination et la dramaturgie générale.</p>
-                                <p class="text-end"><i><b>Durée estimée 6h</b><br>
-                                        (entractes et repas inclus)</i></p>
-                                <p><i class="fa-solid fa-circle-info fa-lg" style="color: #fff;"></i> <a class="action-link" href="https://www.severacdaveyron.fr/premiere-mondiale-au-chateau-de-severac-cromwell-de-victor-hugo/">Infos et réservations (12, 14, 16 août)</a> <i class="fa-solid fa-ticket fa-rotate-by fa-lg" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i></p>
+                                <p class="text-end"><i><b>Durée : 5h40 de spectacle</b><br>
+                                        Entractes (pauses et repas) compris : 7h40</i></p>
+                                <p><i class="fa-solid fa-circle-info fa-lg" style="color: #fff;"></i> <a class="action-link" href="https://www.severacdaveyron.fr/repas-spectacle-cromwell-les-12-14-16-et-18-aout/">Infos et réservations (12, 14, 16 et 18 août)</a> <i class="fa-solid fa-ticket fa-rotate-by fa-lg" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i></p>
                             </div>
                         </div>
                     </div>
@@ -150,17 +150,19 @@
                                 <br>
                                 <span class="label-equipe-crea">Mise en scène /</span> Mélanie Vayssettes, Simon Le Floc'h, Nathan Croquet, Maëva Meunier, Victor Ginicis et Théodore Oliver
                                 <br>
-                                <span class="label-equipe-crea">Régie générale /</span> Grangil Marrast
+                                <span class="label-equipe-crea">Régie générale /</span> Grangil Marrast (Sévérac)
                                 <br>
-                                <span class="label-equipe-crea">Création lumière /</span> Lionel Ueberschlag
+                                <span class="label-equipe-crea">Régie générale /</span> Thierry Manuel (Toulouse)
                                 <br>
-                                <span class="label-equipe-crea">Son et création musicale /</span> François Rivère
+                                <span class="label-equipe-crea">Création lumière /</span> Lionel Ueberschlag et Artur Forterre-Canillas
+                                <br>
+                                <span class="label-equipe-crea">Son et création musicale /</span> Franzie Rivère
                                 <br>
                                 <span class="label-equipe-crea">Musicien⸱ne et création musicale /</span> Clarice Boyriven, Eliot Saour, Raphaël Jamin
                                 <br>
                                 <span class="label-equipe-crea">Rigger /</span> Arnaud Delheure
                                 <br>
-                                <span class="label-equipe-crea">Électricien /</span> Artur Canillas
+                                <span class="label-equipe-crea">Électricien /</span> Julien Louisgrand
                                 <br>
                                 <span class="label-equipe-crea">Technicienne lumière /</span> Héloïse Vandermacq
                                 <br>
@@ -170,7 +172,7 @@
                                 <br>
                                 <span class="label-equipe-crea">Chargée de production /</span> Marion Hodel
                                 <br>
-                                <span class="label-equipe-crea">Stagiaire /</span> Clément Cadinot
+                                <span class="label-equipe-crea">Médiation /</span> Clément Cadinot
                                 <br>
                                 <br>
                                 <span class="label-equipe-crea">Avec :</span>
@@ -209,10 +211,9 @@
                                 <p>
                                     <span class="label-equipe-crea">Co-producteurs :</span> Commune de Sévérac d'Aveyron, Théâtre Jules Julien, Théâtre du Grand Rond.</p>
                                 <p>
-                                    <span class="label-equipe-crea">Avec le soutien de :</span> Mairie de Toulouse, Communauté de communes des Causses à l'Aubrac, Département d'Aveyron, Région Occitanie, l'Union Européenne (Fond Leader).</p>
+                                    <span class="label-equipe-crea">Avec le soutien de :</span> l'Union Européenne (Fond LEADER). la Région Occitanie, le Département de l’Aveyron, la Communauté de communes des Causses à l'Aubrac et la Mairie de Toulouse.</p>
                                 <p>
-                                    <span class="label-equipe-crea">En partenariat avec :</span> Centre Culturel Bonnefoy, Théâtre des Mazades.
-                                </p>
+                                    <span class="label-equipe-crea">En partenariat avec :</span> le Théâtre Sorano, le Centre Culturel Bonnefoy, le Théâtre des Mazades, l’Usine | CNAREP de Tournefeuille.
                                 <p> <span class="label-equipe-crea">Avec le soutien matériel de :</span> Théâtre de la Cité - CDN de Toulouse, RAVIV-Réseau des Arts vivants, MégaSuperThéâtre, leclubdramatique, Avant l'incendie, Le Théâtre du Rocher, Centre Culturel de la Brique Rouge, Théâtre des Mazades, Théâtre Jules Julien, La Grainerie, Théâtre du Pavé, Gafalu, Le Motor, Scène F, Le Phun, Compagnie Le Périscope, Baro d'Evel.
                                 </p>
                                 <!-- <br>
@@ -226,9 +227,14 @@
                         <div class="col-auto col-md-8">
                             <div class="dates-passees">
                                 <ul>
-                                    <li><b>2024</b></li>
-                                    <li>- 12, 14 et 16 août<br>Château de Sévérac d'Aveyron (12)</li>
-                                    <li><i class="fa-solid fa-circle-info fa-lg" style="color: #fff;"></i> <a class="action-link" href="https://www.severacdaveyron.fr/premiere-mondiale-au-chateau-de-severac-cromwell-de-victor-hugo/">Infos et réservations</a> <i class="fa-solid fa-ticket fa-rotate-by fa-lg" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i></li>
+                                    <li><b>2026</b></li>
+                                    <li>- 28, 30 et 31 mai<br>Toulouse (Aveyron)</li>
+                                    <li>- 12, 14 et 16 août<br>Cour d'honneur du Château de Sévérac (Aveyron)</li>
+                                </ul>
+                                <ul>
+                                    <li><b>2025</b></li>
+                                    <li>- 12, 14, 16 et 18 août<br>Cour d'honneur du Château de Sévérac (Aveyron)</li>
+                                    <li><i class="fa-solid fa-circle-info fa-lg" style="color: #fff;"></i> <a class="action-link" href="https://www.severacdaveyron.fr/repas-spectacle-cromwell-les-12-14-16-et-18-aout/">Infos et réservations</a> <i class="fa-solid fa-ticket fa-rotate-by fa-lg" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i></li>
                                     <!-- <br>
                                     <li><b>2013</b></li>
                                     <li>- 1er juin : Halles de Villasavary - Aude</li>
@@ -241,6 +247,10 @@
                                     <li>- 16 juin : Lapanouse - Aveyron (12)</li>
                                     <li>- 13 avril : Théâtre des Trois Ponts - Castelnaudary</li>
                                     <li>- 31 mars : La Maison de la Terre à 21h - Poucharramet</li> -->
+                                </ul>
+                                <ul>
+                                    <li><b>2024</b></li>
+                                    <li>- 12, 14 et 16 août<br>Cour d'honneur du Château de Sévérac (Aveyron)</li>
                                 </ul>
                             </div>
                         </div>
