--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                 <div class="col-sm-10 offset-sm-1">
                     <div class="row">
                         <div class="col-md-9 col-xl-7 offset-xl-2">
-                            <p class="intro-text text-center">En 23/24, la compagnie poursuit la diffusion du <a class="link-creation" href="creations/commencement/index.html"><i>Commencement</i></a> et monte <a href="creations/cromwell/index.html" class="link-creation"><i>CROMWELL</i></a> de Victor Hugo.
+                            <p class="intro-text text-center">Cette saison 2025/2026, <a href="creations/cromwell/index.html" class="link-creation"><i>CROMWELL</i></a>, de Victor Hugo, créé pour la première fois depuis son écriture en 1827, poursuit sa route...
                             <br><br>
-                            <strong><i>Cromwell</i></strong>: <a class="action-link" href="https://www.severacdaveyron.fr/premiere-mondiale-au-chateau-de-severac-cromwell-de-victor-hugo/">Infos et réservations</a>
+                            <strong><i>Cromwell</i></strong>: <a class="action-link" href="https://www.severacdaveyron.fr/repas-spectacle-cromwell-les-12-14-16-et-18-aout/">Infos et réservations</a>
                                 <i class="fa-solid fa-ticket fa-rotate-by fa-xl" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i> <br>
-                                12, 14 et 16 août, Château de Sévérac (Aveyron)
-                                </p>
+                                12, 14, 16 et 18 août, Cour d'honneur du Château de Sévérac (Aveyron)
+                            </p>
                             <!-- <p>Prochaines dates</p> -->
                             <!-- <ul class="text-white ">
                                 <li class=""><i>Le Commencement</i> le 18 mai à Montans (81)</li>
@@ -132,7 +132,7 @@
 </p> -->
                         </div>
                         <div class="col-md-3 col-xl-3 bouttonsoutien">
-                            <a href="https://www.helloasso.com/associations/compagnie-mesdames-a/adhesions/adhesion-cie-mesdames-a-2024/" class="btn btn-danger btn-adhesion" role="button"> <span class="txt-nous-soutenir">Nous soutenir</span><br>
+                            <a href="https://www.helloasso.com/associations/compagnie-mesdames-a/adhesions/adhesion-cie-mesdames-a-2025" class="btn btn-danger btn-adhesion" role="button"> <span class="txt-nous-soutenir">Nous soutenir</span><br>
                                 <span class="txt-nous-soutenir-small">(Soutien et adhésion)</span></a>
                             <!-- <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modal-soutenir-adhesion">    
                             </button>-->
@@ -451,7 +451,7 @@
                                     <img class="card-img-top" src="creations/cromwell/media/images/cromwell-banniere-4-3-bg-2.png_576.webp" alt="eclairs-jeu">
                                     <div class="card-img-overlay d-flex flex-column">
                                         <h4 class="card-title titre-creations-cards"><i>Cromwell</i></h4>
-                                        <h6 class="card-subtitle mb-2"><small><i>2024/25</i></small></h6>
+                                        <h6 class="card-subtitle mb-2"><small><i>2024/25 et 25/26</i></small></h6>
                                     </div>
                                     <div class="card-body">
                                         <p class="card-text">Pièce-fleuve révolutionnaire de Victor Hugo alternant scènes intimes, bouffonneries, cour, chansons, intrigues politiques et d'espionnage...<br>
@@ -976,7 +976,7 @@
                             <h5>Association - loi 1901</h5>
                         </p>
                         <!-- <h5>Association - loi 1901</h5> -->
-                        APE&nbsp;:&nbsp;9001Z&nbsp; /// &nbsp;N°&nbsp;licence&nbsp;entrepreneur&nbsp;:&nbsp;n°&nbsp;L-R-21-13672&nbsp; /// &nbsp;N°&nbsp;siret&nbsp;:&nbsp;539&nbsp;558&nbsp;304&nbsp;000&nbsp;33<br><br>
+                        APE&nbsp;:&nbsp;9001Z&nbsp; /// &nbsp;N°&nbsp;licence&nbsp;entrepreneur&nbsp;:&nbsp;n°&nbsp;L-R-21-13672&nbsp; /// &nbsp;N°&nbsp;siret&nbsp;:&nbsp;539&nbsp;558&nbsp;304&nbsp;000&nbsp;41<br><br>
                     </p>
                     <!-- Vous pouvez nous contacter&nbsp;: -->
                     <!-- <ul class="production">
