--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -255,11 +255,11 @@
                             </div>
                         </div>
                         <div class="col-auto col-md-4 mx-auto">
-                            <a data-gallery="#blueimp-gallery-Affichecromwell" data-toggle="lightbox" href="media/images/photos-origine/affiche-cromwell-jaune_vf.pdf" title="Cromwell - affiche" class="text-white">
+                            <a data-gallery="#blueimp-gallery-Affichecromwell" data-toggle="lightbox" href="media/images/photos-origine/affiche-cromwell-jaune_vf.pdf" title="Cromwell - affiche 2025" class="text-white">
                                 <picture>
-                                    <source src="media/images/affiche-cromwell-jaune_vf.png_720.webp" type="webp">
+                                    <source src="media/images/affiche-cromwell-jaune_v4_2025.png_720.webp" type="webp">
                                 </picture>
-                                <img src="media/images/affiche-cromwell-jaune_vf.png_720.webp" alt="Cromwell affiche" class="img-fluid affiche-cromwell">
+                                <img src="media/images/affiche-cromwell-jaune_v4_2025.png_720" alt="Cromwell affiche 2025" class="img-fluid affiche-cromwell">
                             </a>
                         </div>
                     </div>
