--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -259,7 +259,7 @@
                                 <picture>
                                     <source src="media/images/affiche-cromwell-jaune_v4_2025.png_720.webp" type="webp">
                                 </picture>
-                                <img src="media/images/affiche-cromwell-jaune_v4_2025.png_720" alt="Cromwell affiche 2025" class="img-fluid affiche-cromwell">
+                                <img src="media/images/affiche-cromwell-jaune_v4_2025.png_720.webp" alt="Cromwell affiche 2025" class="img-fluid affiche-cromwell">
                             </a>
                         </div>
                     </div>
