--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -228,7 +228,7 @@
                             <div class="dates-passees">
                                 <ul>
                                     <li><b>2026</b></li>
-                                    <li>- 28, 30 et 31 mai<br>Toulouse (Aveyron)</li>
+                                    <li>- 28, 30 et 31 mai<br>Toulouse</li>
                                     <li>- 12, 14 et 16 août<br>Cour d'honneur du Château de Sévérac (Aveyron)</li>
                                 </ul>
                                 <ul>
