ajout soutien DRAC
,  la DRAC (Été Culturel),

--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -211,7 +211,7 @@
                                 <p>
                                     <span class="label-equipe-crea">Co-producteurs :</span> Commune de Sévérac d'Aveyron, Théâtre Jules Julien, Théâtre du Grand Rond.</p>
                                 <p>
-                                    <span class="label-equipe-crea">Avec le soutien de :</span> l'Union Européenne (Fond LEADER). la Région Occitanie, le Département de l’Aveyron, la Communauté de communes des Causses à l'Aubrac et la Mairie de Toulouse.</p>
+                                    <span class="label-equipe-crea">Avec le soutien de :</span> l'Union Européenne (Fond LEADER), la DRAC (Été Culturel), la Région Occitanie, le Département de l’Aveyron, la Communauté de communes des Causses à l'Aubrac et la Mairie de Toulouse.</p>
                                 <p>
                                     <span class="label-equipe-crea">En partenariat avec :</span> le Théâtre Sorano, le Centre Culturel Bonnefoy, le Théâtre des Mazades, l’Usine | CNAREP de Tournefeuille.
                                 <p> <span class="label-equipe-crea">Avec le soutien matériel de :</span> Théâtre de la Cité - CDN de Toulouse, RAVIV-Réseau des Arts vivants, MégaSuperThéâtre, leclubdramatique, Avant l'incendie, Le Théâtre du Rocher, Centre Culturel de la Brique Rouge, Théâtre des Mazades, Théâtre Jules Julien, La Grainerie, Théâtre du Pavé, Gafalu, Le Motor, Scène F, Le Phun, Compagnie Le Périscope, Baro d'Evel.
